Fix icon alignment inside nav item buttons

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -102,6 +102,11 @@
     }
 }
 
+/* Fix icon alignment inside nav item buttons */
+#navbar_content ul.navbar-nav li.nav-item a.btn svg {
+    margin: .1rem .25rem .088rem -.25rem;
+}
+
 /* Customize sub-navigation element */
 #sub-navigation nav.sub-nav {
     background-color: var(--sp-neutral-lighter, #f3f2f1) !important;
